--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
-    "next": "14.2.3",
+    "next": "^14.2.30",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "react-type-animation": "^3.2.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^3.2.0",
