--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
+    "motion": "^12.23.12",
+    "motion-utils": "^12.23.6",
     "next": "^14.2.30",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.56.2",
